修改注释，以适合生成doc